--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
     <span class="loader"></span>
   </div>
 
+  <button class="load-more-btn is-hidden" type="button">Load more</button>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
