--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <form class="form">
       <label>
-        <input class="search-input" type="text" name="search-text" placeholder="Search images..." required>
+        <input class="search-input" type="text" name="search-text" placeholder="Search images...">
       </label>
       <button class="butn" type="submit">Search</button>
     </form>
